--- a/NewJava/.classpath
+++ b/NewJava/.classpath
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-22">
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-22">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/TJ-BU-708-P16/Downloads/ojdbc6-11.2.0.4.jar">
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/oracle driver">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
